# rhi

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README  config.toml  flake.nix  identity.example.json  identity.json
.github/workflows/: coverage.yml
contract/coverage/: POLICY.md  include.txt  thresholds.toml
crates/rhi/: Cargo.toml
crates/rhi/src/: cli.rs  config.rs  key_profile.rs  keys.rs  lib.rs  main.rs  rhi.rs
crates/rhi/src/adapters/nostr/: event.rs
crates/rhi/src/config/: mod.rs
crates/rhi/src/events/: job_request.rs  mod.rs
crates/rhi/src/features/trade_listing/: mod.rs  subscriber.rs
crates/rhi/src/features/trade_listing/domain/: pricing.rs
crates/rhi/src/features/trade_listing/handlers/: accept.rs  conveyance.rs  fulfillment.rs  invoice.rs  mod.rs  order.rs  payment.rs  receipt.rs
crates/rhi/src/handlers/: job_request_order.rs  job_request_preview.rs  job_request_quote.rs  mod.rs
crates/rhi/src/identity/: keys.rs
crates/rhi/src/infra/: mod.rs  nostr.rs  telemetry.rs
crates/rhi/src/models/: event_classified.rs  mod.rs  order_classified.rs
crates/rhi/src/utils/: mod.rs  nostr.rs  price.rs
docs/: nix.md
scripts/ci/: verify_coverage.py
scripts/just/: coverage_gate.sh  coverage_report.sh  dev.sh  log_reset.sh
src/: cli.rs  config.rs  identity_storage.rs  keys.rs  lib.rs  main.rs  paths.rs  proof_smoke.rs  remote_prove.rs  rhi.rs
src/adapters/nostr/: event.rs
src/events/: job_request.rs
src/features/: mod.rs  trade_validation_receipt.rs
src/features/trade_listing/: mod.rs  state.rs  subscriber.rs
src/features/trade_listing/domain/: pricing.rs
src/features/trade_listing/handlers/: accept.rs  conveyance.rs  dvm.rs  fulfillment.rs  invoice.rs  mod.rs  order.rs  payment.rs  receipt.rs
src/handlers/: job_request_order.rs  job_request_preview.rs  job_request_quote.rs
src/models/: event_classified.rs  mod.rs  order_classified.rs
src/utils/: mod.rs  nostr.rs  unit.rs
tests/: source_guards.rs
