[package]
name = "rhi"
version = "0.1.0"
edition = "2024"
authors = ["Radroots Authors"]
rust-version = "1.92.0"
license = "AGPL-3.0-or-later"
description = "Radroots trade validation and receipt worker"

[workspace]
resolver = "2"

[workspace.dependencies]
radroots-core = { path = "../lib/crates/core" }
radroots-events = { path = "../lib/crates/events" }
radroots-events-codec = { path = "../lib/crates/events-codec" }
radroots-identity = { path = "../lib/crates/identity" }
radroots-nostr = { path = "../lib/crates/nostr" }
radroots-runtime = { path = "../lib/crates/runtime" }
radroots-trade = { path = "../lib/crates/trade" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
radroots-core = { workspace = true, features = ["std", "serde", "typeshare"]  }
radroots-events = { workspace = true, features = ["serde"] }
radroots-events-codec = { workspace = true, features = ["nostr"] }
radroots-identity = { workspace = true }
radroots-nostr = { workspace = true, features = ["client", "codec", "events", "http"] }
radroots-runtime = { workspace = true, features = ["cli"] }
radroots-trade = { workspace = true }

anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
tokio = { version = "1", features = ["full"] }
thiserror = { version = "1" }
tracing = { version = "0.1" }
