[package]
name = "rhi"
version = "0.1.0"
edition = "2024"
authors = ["Radroots Authors"]
rust-version = "1.92.0"
license = "AGPL-3.0-or-later"
description = "Radroots trade validation and receipt worker"

[workspace]
resolver = "2"

[workspace.dependencies]
radroots_core = { path = "../lib/crates/core" }
radroots_events = { path = "../lib/crates/events" }
radroots_events_codec = { path = "../lib/crates/events_codec" }
radroots_identity = { path = "../lib/crates/identity" }
radroots_nostr = { path = "../lib/crates/nostr" }
radroots_runtime = { path = "../lib/crates/runtime" }
radroots_runtime_paths = { path = "../lib/crates/runtime_paths" }
radroots_sp1_guest_trade = { path = "../lib/crates/sp1_guest_trade" }
radroots_sp1_host_trade = { path = "../lib/crates/sp1_host_trade" }
radroots_trade = { path = "../lib/crates/trade" }

[features]
default = []
sp1_proving = ["radroots_sp1_host_trade/expensive_proofs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
radroots_core = { workspace = true, features = ["std", "serde", "typeshare"]  }
radroots_events = { workspace = true, features = ["serde"] }
radroots_events_codec = { workspace = true, features = ["nostr"] }
radroots_identity = { workspace = true }
radroots_nostr = { workspace = true, features = ["client", "codec", "events", "http"] }
radroots_runtime = { workspace = true, features = ["cli"] }
radroots_runtime_paths = { workspace = true }
radroots_sp1_guest_trade = { workspace = true }
radroots_sp1_host_trade = { workspace = true }
radroots_trade = { workspace = true }

anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
sha2 = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
toml = { version = "0.8" }
tracing = { version = "0.1" }

[dev-dependencies]
tempfile = { version = "3" }
