[package]
name = "rhi"
description = "Radroots trade validation and receipt worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
config = "0.15"
futures = "0.3"
nostr = { version = "0.40.0", features = ["nip04"] }
nostr-sdk = "0.40.0"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.19.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.16.0", features = ["v4"] }
radroots-common = { path = "../../../../../crates/radroots-common/" }
