[package]
name = "rhi"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true
description = "Radroots trade validation and receipt worker"

[dependencies]
radroots-core = { workspace = true, features = ["std", "serde", "typeshare"] }
radroots-events = { workspace = true, features = ["serde"] }
radroots-events-codec = { workspace = true, features = ["serde"] }
radroots-identity = { workspace = true }
radroots-runtime = { workspace = true, features = ["cli"] }
radroots-trade = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"]}
futures = { workspace = true }
nostr = { workspace = true }
nostr-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
